Correct sound button overlap

--- a/frontend/src/styles/testimony.scss
+++ b/frontend/src/styles/testimony.scss
@@ -301,7 +301,7 @@ nav {
     }
 
     @media all and (max-width: 390px) {
-      height: 140px;
+      height: 160px;
     }
     &.grey {
       color: #c3c3c3;
